# detrack

./: README.md  pyproject.toml
src/detrack/: __init__.py  core.py  patterns.py
tests/: test_core.py  test_edge_cases.py  test_patterns.py
