[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detrack"
version = "0.1.0"
description = "Strip tracking parameters from URLs. Deterministically. Zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Emiliano Gandini Outeda", email = "emiliano.gandini@protonmail.com" }
]
license = { text = "MIT" }
keywords = ["seo", "tracking", "privacy", "utm", "url-cleaner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Source = "https://github.com/emiliano-gandini-outeda/detrack"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
